Fix bad use of `-Dforeign.restriced=permit`